--- a/components/header/header-component.html
+++ b/components/header/header-component.html
@@ -8,9 +8,9 @@
             <div class="flex items-center space-x-3">
                 <h1 class="no-underline font-bold text-xl">E-commerce</h1>
                 <ul class="flex">
-                    <li><a class="px-3 py-2 hover:underline" href="#">Home</a></li>
-                    <li><a class="px-3 py-2 hover:underline" href="#">Contact</a></li>
-                    <li><a class="px-3 py-2 hover:underline" href="#">About</a></li>
+                    <li><a class="px-3 py-2 hover:underline" href="../../pages/home-page/home-page.html">Home</a></li>
+                    <li><a class="px-3 py-2 hover:underline" href="../../pages/contact-page/contact-page.html">Contact</a></li>
+                    <li><a class="px-3 py-2 hover:underline" href="../../pages/about-page/about-page.html">About</a></li>
                     <li><a class="px-3 py-2 hover:underline" href="../../pages/sign-up-page/sign-up-page.html">Sign Up</a></li>
                 </ul>
             <button type="button" class="px-3 py-1 bg-red-600 text-white font-medium rounded-md hover:bg-red-400 cursor-pointer">Shop</button>
